Replaced great-idea-product snippet with fun-bus-preprocessing snippet.  Updated index to reflect this work.

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 								<p>This was a demonstration of basic HTML using block and inline-block.</p>
 								<span class="image main"><img src="images/great-idea.PNG" alt="" /></span>
 								<p>This was a demonstration of basic HTML/CSS, where I utilized a sticky navigation bar.</p>
-								<span class="image main"><img src="images/great-idea-product.PNG" alt="" /></span>
-								<p>This was a demonstration of border-radius and opacity. </p>
+								<span class="image main"><img src="images/fun-bus-preprocessing.PNG" alt="" /></span>
+								<p>This was a demonstration of LESS preprocessing using variables and parametric mixins. </p>
 								<span class="image main"><img src="images/great-idea-services-tablet.PNG" alt="" /></span>
 								<p>This was a demonstration of responsive web design, using media queries at 800px.</p>
 							</article>
