Fixed sizing issues with photos on Intro, Work and About.

--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/profile.jpg" alt="" /></span>
+								<span class="intro-image"><img src="images/profile.jpg" alt="" /></span>
 								<p>I'm a current student at Lambda School for Full Stack Web Development.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="work-image"><a href="https://jzanderson09.github.io/Preprocessing-II/"><img src="images/fun-bus-preprocessing.PNG" alt="" /></a></span>
+								<span class="work-image"><a href="https://jzanderson09.github.io/Preprocessing-II/" target="_blank"><img src="images/fun-bus-preprocessing.PNG" alt="" /></a></span>
 								<p>This was a demonstration of LESS preprocessing using variables and parametric mixins. </p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/hills-creek.jpg" alt="" /></span>
+								<span class="about-image"><img src="images/hills-creek.jpg" alt="" /></span>
 								<p>I was born in Watertown, SD and raised in the Black Hills.  I'm currently attending Lambda School for Full Stack Web Development.</p>
 								<p>Growing up around some of the most beautiful displays of nature in the state, I enjoy pretty much anything outdoors:  hiking, biking, golfing, disc golfing, anything to get me out in the sun.</p>
 							</article>
