Updated github link on contact pop-up, removed others that I don't use.  Still need to update contact/email form.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="mailto:jzanderson09@gmail.com">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -88,10 +88,7 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/jzanderson09" class="icon fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
